test/main/com/ocaml/sdk/output/errors/samples/type/expected.ml
(*
Error: This expression has type int but an expression was expected of type bool because it is in the condition of an if-statement

Same for while, for, assert, when, variant expression, match etc.
*)
if 3 then ()